--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
 
                 <!-- Other Tools Section Start -->
                 <h3 class="mt-3">Other Tools</h3>
-                <div class="d-flex d-md-flex justify-content-center flex-md-column">
-                    <div class="d-flex flex-column flex-md-row justify-content-center">
+                <div class="d-flex d-md-flex justify-content-center flex-md-column ">
+                    <div class="d-flex flex-column flex-md-row justify-content-center ml-3">
                         <img width="150" src="images/logo-mongodb.png"/>
                         <img width="150" src="images/logo-nodejs.png"/>
                         <img width="150" src="images/logo-expressjs.png"/>
                         <img width="150" src="images/logo-react.png"/>
                         <img width="150" src="images/logo-heroku.png"/>
                     </div>
-                    <div class="mt-3" class="d-flex flex-column flex-md-row">
+                    <div class="mt-3 d-flex flex-column flex-md-row justify-content-center">
                         <img width="150" src="images/logo-git.png"/>
                         <img width="150" src="images/logo-sublime-text-3.png"/>
                         <img width="150" src="images/logo-postman.png"/>
