--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                 <!-- Other Tools Section Start -->
                 <h3 class="mt-3">Other Tools</h3>
-                <div class="d-flex d-md-flex justify-content-center flex-md-column ">
+                <div class="d-flex justify-content-around flex-md-column">
                     <div class="d-flex flex-column flex-md-row justify-content-center ml-3">
                         <img width="150" src="images/logo-mongodb.png"/>
                         <img width="150" src="images/logo-nodejs.png"/>
